feat: Adicionando CRUD  test suite
